--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(drm-stream-reproxy)
 
 find_package(pugixml REQUIRED) 
 find_package(CURL REQUIRED)
+find_package(nlohmann_json REQUIRED)
 
 add_executable(${PROJECT_NAME} src/main.cpp)
-target_link_libraries(${PROJECT_NAME} pugixml::pugixml CURL::libcurl )
+target_link_libraries(${PROJECT_NAME} pugixml::pugixml CURL::libcurl nlohmann_json::nlohmann_json)
